# nes-cart-reader

./: Cargo.toml  LICENSE  README.MD  deny.toml  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: deploy.yml  rust-tests.yml
src/: app.rs  chr.rs  header.rs  main.rs  prg.rs  reader.rs
src/chr/: data.rs  mod.rs
src/component/: button.rs  dialog.rs  input.rs
src/header/: data.rs  mod.rs
src/prg/: data.rs  instructions.rs  mod.rs
src/rom/: chr.rs  chr_data.rs  header.rs  header_data.rs  instructions.rs  mod.rs  prg_data.rs  reader.rs
src/ui/: box.rs  button.rs  canvas.rs  dialog.rs  input.rs  mod.rs  navbar.rs  pagination.rs
