[package]
name = "nes-cart-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.11.0"
uuid = { version = "1.9.1", features = ["v4", "fast-rng"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.2"

[dependencies.web-sys]
version = "0.3.69"
features = ["File"]
